--- a/src/assets/fonts/iconfont/iconfont.css
+++ b/src/assets/fonts/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2933484 */
-  src: url('iconfont.woff2?t=1636698105023') format('woff2'),
-       url('iconfont.woff?t=1636698105023') format('woff'),
-       url('iconfont.ttf?t=1636698105023') format('truetype');
+  src: url('iconfont.woff2?t=1637227249255') format('woff2'),
+       url('iconfont.woff?t=1637227249255') format('woff'),
+       url('iconfont.ttf?t=1637227249255') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-xitong:before {
+  content: "\e62d";
+}
+
+.icon-zhongzhimima:before {
+  content: "\e60a";
+}
+
+.icon-daochu:before {
+  content: "\e61d";
+}
+
+.icon-dayinji_o:before {
+  content: "\eb48";
 }
 
 .icon-sousuo:before {
