--- a/src/assets/fonts/iconfont/iconfont.css
+++ b/src/assets/fonts/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2933484 */
-  src: url('iconfont.woff2?t=1637892314612') format('woff2'),
-       url('iconfont.woff?t=1637892314612') format('woff'),
-       url('iconfont.ttf?t=1637892314612') format('truetype');
+  src: url('iconfont.woff2?t=1638175001206') format('woff2'),
+       url('iconfont.woff?t=1638175001206') format('woff'),
+       url('iconfont.ttf?t=1638175001206') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-tijiaochenggong:before {
+  content: "\e615";
+}
+
+.icon-xiangmulixiang:before {
+  content: "\e788";
+}
+
+.icon-feichux:before {
+  content: "\e65e";
+}
+
+.icon-zhengquewancheng:before {
+  content: "\e8e5";
 }
 
 .icon-map-connect:before {
