--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -368,7 +368,6 @@
     &:hover {
       color: $--color-primary;
     }
-<<<<<<< HEAD
   }
   // 明细删除按钮
   .delete-detail-btn {
@@ -387,7 +386,6 @@
       width: 80px;
       height: 50px;
       line-height: 50px;
-=======
     .table-add-btn {
         width: 100%;
         border-style: dashed;
@@ -396,12 +394,12 @@
     .delete-detail-btn{
         color: $--color-danger;
         cursor: pointer;
->>>>>>> d942d378c84dec860bf8c2030c2b5581dc226d25
     }
     .content {
       width: 100%;
     }
   }
+}
 }
 // 固定底部操作按钮
 .global-fixBottom-actionBtn {
@@ -434,11 +432,9 @@
       &:focus,
       &:active {
         color: #fff;
-<<<<<<< HEAD
         border-color: #85ce61;
         background-color: #85ce61;
       }
-=======
         letter-spacing:5px;
         &:nth-of-type(1) {
             color: #171717;
@@ -482,7 +478,6 @@
                 background-color: #d15f5f;
             }
         }
->>>>>>> d942d378c84dec860bf8c2030c2b5581dc226d25
     }
   }
 }
