--- a/src/assets/fonts/iconfont/iconfont.css
+++ b/src/assets/fonts/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2933484 */
-  src: url('iconfont.woff2?t=1638755354398') format('woff2'),
-       url('iconfont.woff?t=1638755354398') format('woff'),
-       url('iconfont.ttf?t=1638755354398') format('truetype');
+  src: url('iconfont.woff2?t=1638780887324') format('woff2'),
+       url('iconfont.woff?t=1638780887324') format('woff'),
+       url('iconfont.ttf?t=1638780887324') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-daiban:before {
+  content: "\e64a";
 }
 
 .icon-ziliaoku:before {
