审批记录部分提交

--- a/src/assets/scss/panel.scss
+++ b/src/assets/scss/panel.scss
@@ -166,7 +166,14 @@
     line-height: 32px;
     position: absolute;
     right: 5px;
-    color: #84CF65;
+    color: #E6A23C;
+    cursor: default;
+}
+.el-node-state-undo {
+    line-height: 32px;
+    position: absolute;
+    right: 5px;
+    color: #aaa;
     cursor: default;
 }
 
