修改问题单126-【12-08】立项申请--列表页研究内容提要字段鼠标悬浮时，框建议优化一下，长度过长

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -611,3 +611,8 @@ body .el-table th.gutter{
     width: calc(100% - 30px) !important;
     justify-content: flex-end !important;
 }
+
+// tooltip样式
+.el-tooltip__popper {
+    max-width: 600px;
+}
